[XTENSA] Added support for LX110 board and DC233c; fixed LX60.
1. Added support for the LX110 board, thought the LCD display
   is still comming up blank. Fix fix this soon.

2. Added support for the DC233C (V3 MMU). Now boots kernel
   with latest fixes for virtualizing the boot params. Still
   investigating...

3. Updated LX60, looks like it wasn't correct for the UART.
   Now seems find; including the LCD.

Signed-off-by: Pete Delaney <piet@tensilica.com>

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 *~
 *.swp
 *.patch
-core.*
+# core.*
 
 #
 # Top-level generic files
@@ -40,6 +40,25 @@ core.*
 /LOG
 /errlog
 /reloc_off
+*.expand
+*.sibling
+*.locators
+*.initvals
+*.unshare
+*.vregs
+*.jump
+*.life1
+*.life2
+*.split1
+*.split3
+*.lreg
+*.greg
+*.flow
+*.flow2
+*.elnotes
+*.barriers
+*.shorten
+*.eh-ranges
 
 # stgit generated dirs
 patches-*
